--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img height="80" width="80" src="/services/cloud-secure.png" alt="Platform Engineering" />
+    <img height="80" width="80" src="/services/cloud.png" alt="Platform Engineering" />
   </div>
   
   <div class="service-content">
