--- a/services/index.html
+++ b/services/index.html
@@ -124,7 +124,7 @@
     <div class="col-12 col-md-6 mb-2 "><div class="service service-summary">
   
   <div class="service-image">
-    <img height="80" width="80" src="/services/cloud-secure.png" alt="Platform Engineering" />
+    <img height="80" width="80" src="/services/cloud.png" alt="Platform Engineering" />
   </div>
   
   <div class="service-content">
