Fix logo display issues - Update logo references from SVG to PNG files, fix CSS sizing constraints, improve responsive behavior

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta property="og:title" content="Kalpataru Labs" />
 <meta property="og:type" content="Innovation Consultancy" />
 <meta property="og:url" content="https://www.KalpataruLabs.com" />
-<meta property="og:image" content="images/logo.svg" />
+<meta property="og:image" content="/images/logo.png" />
 <meta property="og:description" content="Kalpataru Labs is a services company that provides consultancy and training in the areas of AI, software engineering, cloud and platform engineering." />
 <meta name="twitter:card" content="" />
 <meta name="twitter:site" content="" />
@@ -61,10 +61,10 @@
     <div class='header header-absolute'>
   <div class="container">
     <div class="logo">
-      <a href="https://www.KalpataruLabs.com/"><img height=36px width=36px alt="Kalpataru Labs" src="/images/logo.png" /></a>
+      <a href="https://www.KalpataruLabs.com/"><img alt="Kalpataru Labs" src="/images/logo.png" /></a>
     </div>
     <div class="logo-mobile">
-      <a href="https://www.KalpataruLabs.com/"><img height=36px width=36px alt="Kalpataru Labs" src="/images/logo-mobile.png" /></a>
+      <a href="https://www.KalpataruLabs.com/"><img alt="Kalpataru Labs" src="/images/logo-mobile.png" /></a>
     </div>
     <div id="main-menu" class="main-menu">
   <ul>
