Update website content: fix typos, complete service descriptions, and update copyright to 2025

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
     <div class="hero-text">
       <span class="hero-section"></span>
       <h1>Kalpataru Labs</h1>
-      <p>We believe in finding the right solutions for you. We do this by taking the time to understand your business needs, aligning our services with your business goals..</p>
+      <p>We believe in finding the right solutions for you. We do this by taking the time to understand your business needs, aligning our services with your business goals.</p>
     </div>
     <div class="hero-down">
       <a href="#home">
@@ -140,14 +140,14 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img height="80" width="80" src="/services/ai.png" alt="AI &amp; Machine Learning" />
+    <img height="80" width="80" src="/services/ai-icon.svg" alt="AI &amp; Machine Learning" />
   </div>
   
   <div class="service-content">
     <h2 class="service-title">
       <a href="https://www.KalpataruLabs.com/services/ai-services/">AI &amp; Machine Learning</a>
     </h2>
-    <p>Transform your business with cutting-edge AI solutions. We help organizations implement artificial intelligence and...</p>
+    <p>Transform your business with cutting-edge AI solutions. We help organizations implement artificial intelligence and machine learning technologies to drive innovation and competitive advantage.</p>
   </div>
 </div>
     </div>
@@ -156,14 +156,14 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img height="80" width="80" src="/services/cloud.png" alt="Platform Engineering" />
+    <img height="80" width="80" src="/services/platform-icon.svg" alt="Platform Engineering" />
   </div>
   
   <div class="service-content">
     <h2 class="service-title">
       <a href="https://www.KalpataruLabs.com/services/cloud-platform/">Platform Engineering</a>
     </h2>
-    <p>Improve your developer velocity and time to market by using cloud native tools and technologes. Using the right...</p>
+    <p>Improve your developer velocity and time to market by using cloud native tools and technologies. We help build scalable platforms that enable rapid development and deployment.</p>
   </div>
 </div>
     </div>
@@ -172,14 +172,14 @@
       <div class="service service-summary">
   
   <div class="service-image">
-    <img height="80" width="80" src="/services/se.png" alt="Software Engineering" />
+    <img height="80" width="80" src="/services/software-icon.svg" alt="Software Engineering" />
   </div>
   
   <div class="service-content">
     <h2 class="service-title">
       <a href="https://www.KalpataruLabs.com/services/software-engineering/">Software Engineering</a>
     </h2>
-    <p>In the world of evolving technology, you need a technology partner to keep pace with changes in technology. We work...</p>
+    <p>In the world of evolving technology, you need a reliable partner to keep pace with changes. We work with you to build robust, scalable software solutions that drive business growth.</p>
   </div>
 </div>
     </div>
@@ -213,7 +213,7 @@
           <ul class="footer-menu">
             <li><a href="https://www.KalpataruLabs.com/">Home</a></li>
             <li><a href="https://www.KalpataruLabs.com/contact">Contact</a></li>
-            <li class="copyright">© 2024 Kalpataru Labs</li>
+            <li class="copyright">© 2025 Kalpataru Labs</li>
           </ul>
         </div>
       </div>
