Fix typo and update copyright dates to 2025 - Fixed typo 'technologes' to 'technologies' in Platform Engineering service description - Updated copyright from 2024 to 2025 across all pages for consistency

--- a/services/index.html
+++ b/services/index.html
@@ -131,7 +131,7 @@
     <h2 class="service-title">
       <a href="https://www.KalpataruLabs.com/services/cloud-platform/">Platform Engineering</a>
     </h2>
-    <p>Improve your developer velocity and time to market by using cloud native tools and technologes. Using the right...</p>
+    <p>Improve your developer velocity and time to market by using cloud native tools and technologies. Using the right...</p>
   </div>
 </div></div>
     
@@ -171,7 +171,7 @@
           <ul class="footer-menu">
             <li><a href="https://www.KalpataruLabs.com/">Home</a></li>
             <li><a href="https://www.KalpataruLabs.com/contact">Contact</a></li>
-            <li class="copyright">© 2024 Kalpataru Labs</li>
+            <li class="copyright">© 2025 Kalpataru Labs</li>
           </ul>
         </div>
       </div>
