Update company descriptions and enhance about page content - Changed 'landscape' to 'solutions' for more professional terminology - Enhanced homepage description focusing on GenAI and Cloud Native solutions - Expanded about page with detailed value proposition and company philosophy - Added content about boutique approach and senior-level engagement

--- a/about/index.html
+++ b/about/index.html
@@ -95,7 +95,9 @@
     <div class="hero-text">
       <span class="hero-section"></span>
       <h1>About Us</h1>
-      <p>We believe in finding the right solutions for you. We do this by taking the time to understand your business needs, aligning our services with your business goals.</p>
+      <p>Boutique consultancy specialising in GenAI and Cloud Native solutions.</p>
+      <p>At Kalpataru Labs, we believe that the intersection of artificial intelligence and cloud-native technologies represents the future of enterprise innovation. Our team combines deep technical expertise with strategic business insight to help organizations navigate the complexities of digital transformation.</p>
+      <p>We work exclusively with forward-thinking companies who understand that competitive advantage comes not just from adopting new technologies, but from implementing them thoughtfully and effectively. Our boutique approach means you get senior-level attention on every engagement, ensuring solutions that are tailored to your specific business context and technical requirements.</p>
     </div>
   </div>
 </div>
