--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <title>Kalpataru Labs</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-<meta name="description" content="Kalpataru Labs is a services company that provides consultancy and training in the areas of software engineering, cloud and platform engineering." />
+<meta name="description" content="Boutique consultancy specialising in GenAI and Cloud Native solutions. We help organizations unlock AI potential and build scalable cloud infrastructure for competitive advantage." />
 <meta property="og:title" content="Kalpataru Labs" />
 <meta property="og:type" content="Innovation Consultancy" />
 <meta property="og:url" content="https://www.KalpataruLabs.com" />
 <meta property="og:image" content="/images/logo.png" />
-<meta property="og:description" content="Kalpataru Labs is a services company that provides consultancy and training in the areas of AI, software engineering, cloud and platform engineering." />
+<meta property="og:description" content="Boutique consultancy specialising in GenAI and Cloud Native solutions. We help organizations unlock AI potential and build scalable cloud infrastructure for competitive advantage." />
 <meta name="twitter:card" content="" />
 <meta name="twitter:site" content="" />
 <meta name="twitter:creator" content="" />
@@ -107,7 +107,7 @@
     <div class="hero-text">
       <span class="hero-section"></span>
       <h1>Kalpataru Labs</h1>
-      <p>We believe in finding the right solutions for you. We do this by taking the time to understand your business needs, aligning our services with your business goals.</p>
+      <p>Boutique consultancy specialising in GenAI and Cloud Native solutions. We help forward-thinking organizations unlock the potential of artificial intelligence and build scalable, resilient cloud infrastructure that drives innovation and competitive advantage.</p>
     </div>
     <div class="hero-down">
       <a href="#home">
